# opengl2-analog-clock

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: Clock.h
src/: Clock.cpp  main.cpp
